--- a/src/views/authentication/Login.css
+++ b/src/views/authentication/Login.css
@@ -4,10 +4,10 @@
 .container {
   backdrop-filter: blur(16px) saturate(180%);
   -webkit-backdrop-filter: blur(16px) saturate(180%);
-  background: linear-gradient(135deg, rgba(113, 111, 134, 0.8), rgba(28, 16, 80, 0.8));
-  border-radius: 12px;
-  padding: 15px;
-  filter: drop-shadow(0 30px 10px rgba(0, 0, 0, 0.125));
+  background: linear-gradient(135deg, rgba(113, 111, 134, 0.8), rgba(33, 15, 86, 0.8));
+  border-radius: 20px;
+  padding: 20px;
+  filter: drop-shadow(0 30px 10px rgba(0, 0, 0, 5));
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -19,16 +19,23 @@
 .wrapper {
   width: 100%;
   height: 100%;
+
+  h1 {
+    text-transform: none;
+    font-size: 4rem;
+    font-style: normal;
+    font-family: 'Times New Roman', Times, serif;
+  }
 }
 
 .banner-image {
-  background-image: url(https://augray.com/blog/wp-content/uploads/2020/12/AR-visual.jpg);
+  background-image: url(https://images.pexels.com/photos/1708912/pexels-photo-1708912.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1);
   background-position: center;
   background-size: cover;
   height: 350px;
   width: 100%;
   border-radius: 12px;
-  border: 1px solid rgba(35, 10, 51, 0.255);
+  border: 1px solid rgba(35, 10, 51, 5);
 }
 
 h1 {
@@ -41,7 +48,7 @@ h1 {
 
 p {
   color: #fff;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Times New Roman', Times, serif;
   text-align: center;
   font-size: 0.8rem;
   line-height: 150%;
